Fix logo stretching in carousels

--- a/wp-content/themes/sesco-dss/sass/components/media/_media.scss
+++ b/wp-content/themes/sesco-dss/sass/components/media/_media.scss
@@ -40,7 +40,7 @@ img {
     transition: transform 0.2s ease-out;
 
     &.logo {
-      width: 100%;
+      width: auto;
       max-width: 30rem;
       max-height: 100%;
       min-height: auto;
