--- a/wp-content/themes/sesco-dss/style.css
+++ b/wp-content/themes/sesco-dss/style.css
@@ -1931,7 +1931,7 @@ img.custom-logo {
 }
 
 .img-w img.logo {
-	width: 100%;
+	width: auto;
 	max-width: 30rem;
 	max-height: 100%;
 	min-height: auto;
